# learn

./: .gitignore
bash/: prompt.md
c/main/: BUILD.bazel  main.c
c/pthread/: main.c
c/tokenization/: BUILD.bazel  README.md  WORKSPACE  example.c  tokenization.h  tokenization_test.cc
core_tag/: BUILD  README.md  WORKSPACE  core_tag.cc  core_tag.h  main.cc
core_tag/golang/: go.mod  main  main.go
cycle_counting/: BUILD.bazel  README.md  WORKSPACE  main.cc  stats.cc  stats.h  stats_test.cc
fastai/: 3vs7.ipynb  README.md
fuse/: README.md
kvm/: README.md
learn_http_parser/: README.md  WORKSPACE
learn_http_parser/src/: BUILD.bazel  server.c
micrograd/: README.md
micrograd/micrograd/: autodiff.py  demo.ipynb  engine.py  test_engine.py
net/tun/: BUILD.bazel  README.md  tun_reader.cc
qemu_alpine_on_mac/: README.md
rust/draw/: Cargo.toml  build.rs
rust/draw/protos/: draw.proto  image.proto
rust/draw/src/: lib.rs  main.rs
rust/hello_cargo/: Cargo.toml
rust/http/: Cargo.toml
rust/http/src/: main.rs
tcp_server/: BUILD.bazel  README.md  main.c  tcp_server.h
